--- a/concepts-and-syntax/01_concepts_and_syntax.ipynb
+++ b/concepts-and-syntax/01_concepts_and_syntax.ipynb
@@ -49,10 +49,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "af9ecc62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Leah\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"What's your name? \")\n",
     "print(\"Hello,\", name)"
@@ -70,12 +78,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "4cde1d17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your favorite color is blue\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "color = input(\"What's your favorite color? \")\n",
+    "print(\"Your favorite color is\", color)"
    ]
   },
   {
@@ -90,10 +108,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0ee83f72",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "World!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello\\nWorld!\")  # \\n creates a new line"
    ]
@@ -110,12 +137,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "44d9bd90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am writing\n",
+      "a sentence that is on two lines.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "print(\"I am writing\\na sentence that is on two lines.\")"
    ]
   },
   {
@@ -163,12 +200,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9986ff21",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leah likes pasta and the color blue.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "first_name = \"Leah\"\n",
+    "favorite_food = \"pasta\"\n",
+    "favorite_color = \"blue\"\n",
+    "print(first_name, \"likes\", favorite_food, \"and the color\", favorite_color + \".\")"
    ]
   },
   {
@@ -183,10 +232,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "b914af0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taylor Swift is a famous singer.\n"
+     ]
+    }
+   ],
    "source": [
     "first_name = \"Taylor\"\n",
     "last_name = \"Swift\"\n",
@@ -205,12 +262,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5c69f62c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Leah is 21 years old and loves reading.\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "first_name = \"Leah\"\n",
+    "age = 21\n",
+    "hobby = \"reading\"\n",
+    "print(f\"{first_name} is {age} years old and loves {hobby}.\")"
    ]
   },
   {
@@ -246,12 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c7b29721",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Harry Potter is such a good book, and I love Japan!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "book = input(\"What is your favorite book?\")\n",
+    "visit = input(\"What is one place you would most like to visit?\")\n",
+    "print(f\"{book} is such a good book, and I love {visit}!\")"
    ]
   },
   {
@@ -268,7 +348,25 @@
    ]
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.14.2"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
